--- a/style.css
+++ b/style.css
@@ -201,7 +201,15 @@ nav.dark-element{
 .value{
     color: hsl(0, 0%, 52%);
 }
-
+.population.dark-element .value{
+    color: hsl(0, 0%, 100%);
+}
+.capital.dark-element .value{
+    color: hsl(0, 0%, 100%);
+}
+.region.dark-element .value{
+    color: hsl(0, 0%, 100%);
+}
 .error{
     border: 1px solid #f57149;
     border-radius: 5px;
